--- a/TicTac/TicTac.Tests/TicTac.Tests.csproj
+++ b/TicTac/TicTac.Tests/TicTac.Tests.csproj
@@ -56,6 +56,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="BoardTests.cs" />
+    <Compile Include="MoveTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -65,55 +66,64 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Data\empty-board.json">
+    <None Include="Data\Board\empty-board.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="Data\o-diag-l-win.json">
+    <None Include="Data\Moves\x-can-win-right.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="Data\o-mid-v-win.json">
+    <None Include="Data\Moves\x-can-win-left.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="Data\o-mid-h-win.json">
+    <None Include="Data\Scores\o-diag-l-win.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="Data\o-bottom-win.json">
+    <None Include="Data\Scores\o-mid-v-win.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="Data\o-diag-r-win.json">
+    <None Include="Data\Scores\o-mid-h-win.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="Data\o-top-win.json">
+    <None Include="Data\Scores\o-bottom-win.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="Data\o-left-win.json">
+    <None Include="Data\Scores\o-diag-r-win.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="Data\x-left-win.json">
+    <None Include="Data\Scores\o-top-win.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="Data\o-right-win.json">
+    <None Include="Data\Scores\o-left-win.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="Data\x-top-win.json">
+    <None Include="Data\Scores\x-left-win.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="Data\x-bottom-win.json">
+    <None Include="Data\Scores\o-right-win.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="Data\x-middle-horizontal-win.json">
+    <None Include="Data\Moves\x-can-win-top.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="Data\x-middle-vertical-win.json">
+    <None Include="Data\Scores\x-top-win.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="Data\x-left-diagonal-win.json">
+    <None Include="Data\Scores\x-bottom-win.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="Data\x-right-diagonal-win.json">
+    <None Include="Data\Scores\x-middle-horizontal-win.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="Data\x-right-win.json">
+    <None Include="Data\Scores\x-middle-vertical-win.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Data\Scores\x-left-diagonal-win.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Data\Scores\x-right-diagonal-win.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Data\Scores\x-right-win.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Include="packages.config" />
