--- a/TicTac/TicTac/TicTac.csproj
+++ b/TicTac/TicTac/TicTac.csproj
@@ -40,7 +40,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Board-Move.cs" />
+    <Compile Include="Board-Pivot.cs" />
+    <Compile Include="Board-State.cs" />
     <Compile Include="Board.cs" />
+    <Compile Include="Game.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Row.cs" />
     <Compile Include="Tile.cs" />
